Bug 1742168, increase maxStateObjectSize to 16MB and make the pref a StaticPref, r=peterv
Keeping the pref as signed, since the existing code explicitly handles that case, so someone may have -1 as the pref value.

Differential Revision: https://phabricator.services.mozilla.com/D132020

UltraBlame original commit: 0de3705203a4fb7d62b5c016939af401b5eee51b

--- a/docshell/test/navigation/mochitest.ini
+++ b/docshell/test/navigation/mochitest.ini
@@ -170,6 +170,7 @@ support-files = file_sessionhistory_iframe_removal.html
 [test_bug1326251.html]
 skip-if = toolkit == 'android' || sessionHistoryInParent # It relies on the bfcache
 [test_bug1379762.html]
+[test_state_size.html]
 [test_static_and_dynamic.html]
 skip-if = true # This was disabled for a few years now anyway, bug 1677544
 [test_sibling-matching-parent.html]
