Bug 1731999 - Part 1: Add a pref 'privacy.partition.serviceWorkers'. r=pbz
This patch adds a pref to control unconditional partitioned service
worker in dFPI.

Differential Revision: https://phabricator.services.mozilla.com/D131786

UltraBlame original commit: bf681adbb94e7bdb9c6b70396aaed37ed0841ccd

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -10944,6 +10944,12 @@
   value: true
   mirror: always
 
+# Partition the service workers unconditionally when dFPI is enabled.
+- name: privacy.partition.serviceWorkers
+  type: RelaxedAtomicBool
+  value: @IS_NIGHTLY_BUILD@
+  mirror: always
+
 # The global switch to control the URL query sting stripping which strips query
 # parameters from loading URIs to prevent bounce (redirect) tracking.
 - name: privacy.query_stripping.enabled
