--- a/testing/web-platform/meta/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.letterSpacing.measure.html.ini
+++ b/testing/web-platform/meta/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.letterSpacing.measure.html.ini
@@ -1,4 +1,3 @@
-[2d.text.drawing.style.spacing.measure.html]
+[2d.text.drawing.style.letterSpacing.measure.html]
   [Testing letter spacing and word spacing]
     expected: FAIL
-
