--- a/testing/web-platform/meta/fetch/private-network-access/non-secure-context.window.js.ini
+++ b/testing/web-platform/meta/fetch/private-network-access/non-secure-context.window.js.ini
@@ -31,3 +31,36 @@
 
   [Treat-as-public non-secure context cannot open connection to ws://localhost.]
     expected: FAIL
+
+  [private to local: failure.]
+    expected: FAIL
+
+  [public to local: failure.]
+    expected: FAIL
+
+  [public to private: failure.]
+    expected: FAIL
+
+  [treat-as-public-address to local: failure.]
+    expected: FAIL
+
+  [treat-as-public-address to private: failure.]
+    expected: FAIL
+
+  [private https to local: failure.]
+    expected: FAIL
+
+  [public https to local: failure.]
+    expected: FAIL
+
+  [public https to private: failure.]
+    expected: FAIL
+
+  [private to local: websocket failure.]
+    expected: FAIL
+
+  [public to local: websocket failure.]
+    expected: FAIL
+
+  [treat-as-public to local: websocket failure.]
+    expected: FAIL
