--- a/testing/web-platform/meta/html/cross-origin-opener-policy/popup-redirect-cache.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/popup-redirect-cache.https.html.ini
@@ -32,9 +32,10 @@
 
 [popup-redirect-cache.https.html?8-last]
   expected:
-    if (os == "android") and not swgl: [OK, TIMEOUT, CRASH]
-    if (os == "android") and swgl: [OK, TIMEOUT]
     if (os == "linux") and fission: [OK, TIMEOUT]
+    if (os == "android") and swgl: [TIMEOUT, OK]
+    if (os == "android") and not swgl and debug: [OK, TIMEOUT, CRASH]
+    if (os == "android") and not swgl and not debug: [OK, TIMEOUT, CRASH]
 
 [popup-redirect-cache.https.html?4-5]
   expected:
@@ -63,7 +64,9 @@
 [popup-redirect-cache.https.html?0-1]
   expected:
     if (os == "linux") and fission: [OK, TIMEOUT]
-    if os == "android": [OK, TIMEOUT, CRASH]
+    if (os == "android") and not swgl and not debug: [OK, TIMEOUT, CRASH]
+    if (os == "android") and not swgl and debug: [OK, TIMEOUT, CRASH]
+    if (os == "android") and swgl: [OK, TIMEOUT, CRASH]
   [same-origin document opening popup redirect from https://web-platform.test:8443 to https://not-web-platform.test:8443 with redirectCache true and destCache false]
     expected:
       if fission and (os == "linux"): [PASS, TIMEOUT]
