Bug 1742611 [wpt PR 31720] - Update wpt metadata, a=testonly
wpt-pr: 31720
wpt-type: metadata

UltraBlame original commit: 6b248673fb04ad0964ecb9872898694f855108f6

--- a/testing/web-platform/meta/fetch/range/sw.https.window.js.ini
+++ b/testing/web-platform/meta/fetch/range/sw.https.window.js.ini
@@ -6,6 +6,9 @@
     if (os == "linux") and not debug and webrender and not fission: [OK, ERROR]
     if (os == "win") and (processor == "x86") and not debug: [OK, TIMEOUT]
     if (os == "mac") and not debug: [OK, ERROR]
+    if not debug and (os == "win") and (processor == "x86_64"): OK
+    if not debug and (os == "android"): OK
+    CRASH
   [Ranged response not allowed following no-cors ranged request]
     expected:
       if (os == "linux") and not debug and webrender: [FAIL, PASS]
@@ -29,4 +32,3 @@
   [Accept-Encoding should not appear in a service worker]
     expected:
       if (processor == "x86") and not debug: [PASS, NOTRUN]
-
