Bug 1743525 - Enable window occlusion on early beta on Windows r=gfx-reviewers,jrmuizel
window occlusion needs to be tested by more users.

Differential Revision: https://phabricator.services.mozilla.com/D132432

UltraBlame original commit: 1a01c1aa7817e9fd99182bc4b737ee4ce6359619

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12313,7 +12313,7 @@
 
 - name: widget.windows.window_occlusion_tracking.enabled
   type: bool
-  value: @IS_NIGHTLY_BUILD@
+  value: @EARLY_BETA_OR_EARLIER@
   mirror: always
 
 - name: widget.windows.window_occlusion_tracking_display_state.enabled
