Bug 1572299 - disable test_opener.html on win10_2004 and linux64 r=intermittent-reviewers,MasterWayZ DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D132304

UltraBlame original commit: 49ff06e5445293a91294d262e288790d1011a213

--- a/docshell/test/navigation/mochitest.ini
+++ b/docshell/test/navigation/mochitest.ini
@@ -144,6 +144,8 @@ support-files = file_online_offline_bfcache.html
 [test_opener.html]
 skip-if =
   fission && xorigin  # Bug 1716402 - New fission platform triage
+  os == "linux" && bits == 64 # Bug 1572299
+  win10_2004 # Bug 1572299
 [test_popup-navigates-children.html]
 [test_reload.html]
 support-files = file_reload.html
