Backed out changeset 66f4a3acc86b (bug 1738937) for causing xpc failures in test_quicksuggest_merino. CLOSED TREE
UltraBlame original commit: 4b0ccda4a55ec466accc848758d255469564c643

--- a/toolkit/components/nimbus/test/unit/xpcshell.ini
+++ b/toolkit/components/nimbus/test/unit/xpcshell.ini
@@ -23,3 +23,4 @@ skip-if =
 [test_RemoteSettingsExperimentLoader.js]
 [test_RemoteSettingsExperimentLoader_updateRecipes.js]
 [test_ExperimentAPI_NimbusFeatures.js]
+[test_FeatureManifest.js]
