Bug 1722607 - disable browser_ext_tabs_discard_reversed.js on Mac_64 for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D131998

UltraBlame original commit: 633d0f8eb05de40fc3a170c5247ba2499391262d

--- a/browser/components/extensions/test/browser/browser.ini
+++ b/browser/components/extensions/test/browser/browser.ini
@@ -264,6 +264,8 @@ https_first_disabled = true
 skip-if = !e10s
 [browser_ext_tabs_discard_reversed.js]
 https_first_disabled = true
+skip-if =
+  os == "mac" && bits == 64 # Bug 1722607
 [browser_ext_tabs_discarded.js]
 https_first_disabled = true
 [browser_ext_tabs_duplicate.js]
