Bug 1741373 - Make midi.testing a static preference r=padenot
Differential Revision: https://phabricator.services.mozilla.com/D131222

UltraBlame original commit: e0d7dec0492c7913712970b790c5944bef6f3589

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -9135,6 +9135,15 @@
 #endif
 
 #---------------------------------------------------------------------------
+# Prefs starting with "midi."
+#---------------------------------------------------------------------------
+
+- name: midi.testing
+  type: RelaxedAtomicBool
+  value: false
+  mirror: always
+
+#---------------------------------------------------------------------------
 # Prefs starting with "mousewheel."
 #---------------------------------------------------------------------------
 
