Bug 1736060 - Part 1: Add option for import assertions. r=mgaudet,arai
Differential Revision: https://phabricator.services.mozilla.com/D126041

UltraBlame original commit: 88435ef531a835c266c0b0594c078b0ccea15036

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6262,6 +6262,14 @@
     value: true
     mirror: always
 
+#ifdef NIGHTLY_BUILD
+  # Experimental support for Import Assertions in JavaScript.
+-   name: javascript.options.experimental.import_assertions
+    type: bool
+    value: false
+    mirror: always
+#endif  // NIGHTLY_BUILD
+
   # Support for Private Fields in JavaScript.
 - name: javascript.options.experimental.private_fields
   type: bool
