--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -7067,7 +7067,7 @@
 # Whether we should expose all shorthands in getComputedStyle().
 - name: layout.css.computed-style.shorthands
   type: bool
-  value: false
+  value: true
   mirror: always
 
 # Whether we should avoid exposing styles of elements outside the flat tree in getComputedStyle().
