Bug 1742879 - Post: Add tests for platform-specific `handleFlagWithParam` behaviour. r=nika
Differential Revision: https://phabricator.services.mozilla.com/D132627

UltraBlame original commit: 994d0986757c4f692b52c8e41c6a3facdf63e294

--- a/toolkit/components/commandlines/test/unit/xpcshell.ini
+++ b/toolkit/components/commandlines/test/unit/xpcshell.ini
@@ -8,4 +8,5 @@ support-files =
 [test_bug666224.js]
 [test_classinfo.js]
 [test_createCommandLine.js]
+[test_handleFlagWithParam.js]
 [test_resolvefile.js]
