Bug 1743612 part 4 - Add transpiler support for AddSlotAndCallAddPropHook. r=iain
Differential Revision: https://phabricator.services.mozilla.com/D132551

UltraBlame original commit: a9b155370ae7df5e783c8960e80c64c3288f9602

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -870,7 +870,7 @@
 
 - name: AddSlotAndCallAddPropHook
   shared: true
-  transpile: false
+  transpile: true
   cost_estimate: 6
   args:
     obj: ObjId
