Bug 1743122 - Disable TRR temp blocklist feature in tests. r=valentin,necko-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D132245

UltraBlame original commit: 8ea0830f0ebc44de4de0b43a61c949415f2df561

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -9874,6 +9874,15 @@
   value: @IS_NIGHTLY_BUILD@
   mirror: always
 
+# If false, the temporary blocklisting feature is disabled.
+# This is useful for tests to prevent bleeding extra reqs
+# between tasks, since we may attempt to look up the
+# parent domain in the background when blocklisting a host.
+- name: network.trr.temp_blocklist
+  type: RelaxedAtomicBool
+  value: true
+  mirror: always
+
 # Single TRR request timeout, in milliseconds
 - name: network.trr.request_timeout_ms
   type: RelaxedAtomicUint32
