Bug 1737198 - Part 6: Enable strict fallback mode by default in Nightly. r=necko-reviewers,valentin
Differential Revision: https://phabricator.services.mozilla.com/D132112

UltraBlame original commit: 546b0f714a4d58d9ca6059e2285386b3fe848223

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -9861,7 +9861,7 @@
 # If true, don't fallback to native DNS upon network errors.
 - name: network.trr.strict_native_fallback
   type: RelaxedAtomicBool
-  value: false
+  value: @IS_NIGHTLY_BUILD@
   mirror: always
 
 # Single TRR request timeout, in milliseconds
