--- a/testing/web-platform/meta/css/css-page/page-rule-declarations-002.html.ini
+++ b/testing/web-platform/meta/css/css-page/page-rule-declarations-002.html.ini
@@ -1,3 +1,10 @@
 [page-rule-declarations-002.html]
-  prefs: [layout.css.named-pages.enabled:true]
+  [e.style['page'\] = "auto" should set the property value]
+    expected: FAIL
+
+  [e.style['page'\] = "large_page" should set the property value]
+    expected: FAIL
+
+  [e.style['page'\] = "small_page" should set the property value]
+    expected: FAIL
 
