Bug 1743339 - Make `NativeKeyBindings` for single line editor try the one for multiline editor too r=stransky
`GtkEntry` is used to check what editing or natvigation command is
mapped to every key combination when `<input>` has focus.  However,
it does not support `select-all` signal, thus, Gecko does not respect
native shortcut key for "Select All".

This patch makes it try to check whether the given key combination is
mapped to "Select All" or not in `GtkTextView` widget which supports
`select-all` signal.  Thus, we'll get consistent behavior between
`<input>` and `<textarea>` about "Select All".

Differential Revision: https://phabricator.services.mozilla.com/D132450

UltraBlame original commit: 5a6a6fdfc7ff35e23c05b7aa17a370249649318d

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -11582,6 +11582,19 @@
 #endif
   mirror: always
 
+#ifdef MOZ_WIDGET_GTK
+# Only GtkTextView (native multiline text viewer/editor) supports "select-all"
+# signal so that we cannot know "select-all" key bindings only with GtkEntry.
+# When this pref is set to true, if a key combination does not cause any
+# signals in GtkEntry, try to check the key combination is mapped to
+# "select-all" in GtkTextView or not.  If it's mapped to other commands, they
+# are just ignored.
+- name: ui.key.use_select_all_in_single_line_editor
+  type: bool
+  value: @IS_NIGHTLY_BUILD@
+  mirror: always
+#endif
+
 # Duration of timeout of incremental search in menus (ms).  0 means infinite.
 - name: ui.menu.incremental_search.timeout
   type: uint32_t
