--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -11582,6 +11582,13 @@
 #endif
   mirror: always
 
+# Whether native key bindings in the environment or builtin shortcut key
+# definitions in Gecko are used first in <input> and <textarea>
+- name: ui.key.textcontrol.prefer_native_key_bindings_over_builtin_shortcut_key_definitions
+  type: bool
+  value: @IS_NIGHTLY_BUILD@
+  mirror: always
+
 #ifdef MOZ_WIDGET_GTK
 # Only GtkTextView (native multiline text viewer/editor) supports "select-all"
 # signal so that we cannot know "select-all" key bindings only with GtkEntry.
