Bug 1744037. Set media.rdd-ffmpeg.enabled=IS_EARLY_BETA_OR_EARLIER r=stransky
Differential Revision: https://phabricator.services.mozilla.com/D132699

UltraBlame original commit: 84872badd1c1cb0aefeccfa995074f4b902359ab

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -8342,7 +8342,7 @@
 #ifdef MOZ_FFMPEG
 - name: media.rdd-ffmpeg.enabled
   type: RelaxedAtomicBool
-  value: false
+  value: @IS_EARLY_BETA_OR_EARLIER@
   mirror: always
 #endif
 
