Backed out changeset 9c623cac6b96 (bug 1697647) for causing mozlint failures. CLOSED TREE
UltraBlame original commit: edb720848dda959588345d7f5a9496518ee20006

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -982,6 +982,8 @@ description = legacy sync IPC - please add detailed description
 description = legacy sync IPC - please add detailed description
 [PHal::GetWakeLockInfo]
 description = legacy sync IPC - please add detailed description
+[PHal::LockScreenOrientation]
+description = legacy sync IPC - please add detailed description
 [PPrinting::SavePrintSettings]
 description = legacy sync IPC - please add detailed description
 [PHandlerService::FillHandlerInfo]
