Bug 1744225 - Correct early beta variable name guarding preference in StaticPrefs.yaml r=sotaro
Differential Revision: https://phabricator.services.mozilla.com/D132775

UltraBlame original commit: db7955ab0f0dea616c70b167611baae1b251a614

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12365,7 +12365,7 @@
 
 - name: widget.windows.window_occlusion_tracking.enabled
   type: bool
-  value: @EARLY_BETA_OR_EARLIER@
+  value: @IS_EARLY_BETA_OR_EARLIER@
   mirror: always
 
 - name: widget.windows.window_occlusion_tracking_display_state.enabled
