Bug 650091 - Sort authentication challenges by safety rating r=necko-reviewers,kershaw
Differential Revision: https://phabricator.services.mozilla.com/D132499

UltraBlame original commit: de7aadc244b803299ac33a2d210e09335653a139

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -9321,6 +9321,12 @@
   value: true
   mirror: always
 
+# Whether to use challenges in the most secure order. See bug 650091.
+- name: network.auth.choose_most_secure_challenge
+  type: RelaxedAtomicBool
+  value: true
+  mirror: always
+
 # See the full list of values in nsICookieService.idl.
 - name: network.cookie.cookieBehavior
   type: RelaxedAtomicInt32
