--- a/taskcluster/ci/test/xpcshell.yml
+++ b/taskcluster/ci/test/xpcshell.yml
@@ -64,7 +64,7 @@ xpcshell:
             macosx.*-64(-shippable|-devedition|-asan)?(-qr)?/.*: 2
             linux1804-64(-qr)?/debug: 6
             .*-tsan-qr/opt: 8
-            windows.*(-shippable|-devedition|-asan|.*-qr)?/.*: 2
+            windows.*(-shippable|-devedition|-asan|.*-qr)?/.*: 4
             default: 5
     max-run-time:
         by-test-platform:
@@ -81,6 +81,12 @@ xpcshell:
                     windows10-64-2004-asan.*: 3
                     android-em-7.0-x86_64-qr/debug-isolated-process: 3
                     default: default
+    mozharness:
+        extra-options:
+            by-test-platform:
+                windows10.*:
+                    - --threads=2
+                default: []
     fetches:
         toolchain:
             by-test-platform:
