--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -438,6 +438,7 @@ cbindgen-types = [
     { gecko = "StyleBreakWithin", servo = "crate::values::computed::BreakWithin" },
     { gecko = "StyleBorderStyle", servo = "crate::values::computed::BorderStyle" },
     { gecko = "StyleOutlineStyle", servo = "crate::values::computed::OutlineStyle" },
+    { gecko = "StyleScrollDirection", servo = "crate::stylesheets::scroll_timeline_rule::ScrollDirection" },
     { gecko = "StyleScrollSnapAlign", servo = "crate::values::computed::ScrollSnapAlign" },
     { gecko = "StyleScrollSnapStrictness", servo = "crate::values::computed::ScrollSnapStrictness" },
     { gecko = "StyleScrollSnapType", servo = "crate::values::computed::ScrollSnapType" },
