--- a/servo/ports/geckolib/cbindgen.toml
+++ b/servo/ports/geckolib/cbindgen.toml
@@ -236,6 +236,7 @@ include = [
   "DProperty",
   "ImageRendering",
   "ScrollbarGutter",
+  "ScrollDirection",
 ]
 item_types = ["enums", "structs", "unions", "typedefs", "functions", "constants"]
 renaming_overrides_prefixing = true
