Bug 1723755 - Nimbus platform API does not read fallbackPrefs r=barret
Depends on D130159

Differential Revision: https://phabricator.services.mozilla.com/D131331

UltraBlame original commit: cc71a688509fa8a5174c9963b7af7f521d532854

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -4,6 +4,15 @@
 
 # Features must be added here to be accessible through the NimbusFeature API.
 
+testFeature:
+  description: Test only feature
+  hasExposure: false
+  isEarlyStartup: true
+  variables:
+    testInt:
+      type: int
+      fallbackPref: nimbus.testing.testInt
+      description: Int pref used by platform API tests
 search:
   description: The Search Services
   hasExposure: false
