Bug 1731574 - [remote] Emit cached messages from ConsoleAPIListener r=webdriver-reviewers,whimboo
Differential Revision: https://phabricator.services.mozilla.com/D132843

UltraBlame original commit: e21ddddb74f7c95ac6c441b6db328f129d4a56fb

--- a/remote/shared/listeners/test/browser/browser.ini
+++ b/remote/shared/listeners/test/browser/browser.ini
@@ -1,9 +1,12 @@
 [DEFAULT]
 tags = remote
 subsuite = remote
+support-files =
+  head.js
 prefs =
   remote.messagehandler.modulecache.useBrowserTestRoot=true
 
 [browser_ConsoleAPIListener.js]
+[browser_ConsoleAPIListener_cached_messages.js]
 [browser_ConsoleListener.js]
 
