--- a/remote/shared/listeners/test/browser/browser.ini
+++ b/remote/shared/listeners/test/browser/browser.ini
@@ -9,4 +9,5 @@ prefs =
 [browser_ConsoleAPIListener.js]
 [browser_ConsoleAPIListener_cached_messages.js]
 [browser_ConsoleListener.js]
+[browser_ConsoleListener_cached_messages.js]
 
