--- a/toolkit/components/antitracking/test/browser/browser.ini
+++ b/toolkit/components/antitracking/test/browser/browser.ini
@@ -94,6 +94,7 @@ support-files = tracker.js
 [browser_serviceWorkersWithStorageAccessGranted.js]
 skip-if = debug # Bug 1700551
 [browser_storageAccessDoorHanger.js]
+[browser_storageAccessFrameInteractionGrantsUserInteraction.js]
 [browser_storageAccessPrivilegeAPI.js]
 [browser_storageAccessPromiseRejectHandlerUserInteraction.js]
 [browser_storageAccessPromiseResolveHandlerUserInteraction.js]
