Bug 1680846 - Part 2 - Add new tests that verifies that autogrants of SAA require the storageAccessAPI permission, r=timhuang
Also, this repairs tests broken by Part 1 of this patch

Differential Revision: https://phabricator.services.mozilla.com/D132597

UltraBlame original commit: 625308c5c0a57e0ecf72a8ebecbc16495cbecb95

--- a/toolkit/components/antitracking/test/browser/browser.ini
+++ b/toolkit/components/antitracking/test/browser/browser.ini
@@ -93,6 +93,7 @@ support-files = tracker.js
 [browser_userInteraction.js]
 [browser_serviceWorkersWithStorageAccessGranted.js]
 skip-if = debug # Bug 1700551
+[browser_storageAccessAutograntRequiresUserInteraction.js]
 [browser_storageAccessDeniedGivesNoUserInteraction.js]
 [browser_storageAccessDoorHanger.js]
 [browser_storageAccessFrameInteractionGrantsUserInteraction.js]
