Bug 1707963: Let the PermissionManager be initialized lazily but not after shutdown started. r=permissions-reviewers,timhuang,janv
Differential Revision: https://phabricator.services.mozilla.com/D132088

UltraBlame original commit: 5d86acaf84daf8b146ce0b86a124a9fd5fffefb0

--- a/services/common/tests/unit/xpcshell.ini
+++ b/services/common/tests/unit/xpcshell.ini
@@ -33,7 +33,8 @@ tags = remote-settings blocklist
 [test_hawkclient.js]
 skip-if = os == "android"
 [test_hawkrequest.js]
-skip-if = os == "android"
+skip-if = os == "android" || socketprocess_networking
+# See bug 1743079 for socket process.
 
 [test_logmanager.js]
 [test_observers.js]
