Bug 1743685 - Add pref for changing Merino providers and client variants r=adw
Merino providers are different content sources. Being able to change them with
a preference will aid in QA, allowing us to more easily test non-yet-launched
functionality.

Client variants are a part of the experimentation system, and may be used to
modify server behavior based on active client experiments.

Differential Revision: https://phabricator.services.mozilla.com/D133275

UltraBlame original commit: 51afd58bb6ffe0d242f35bb19cf7b7be7d2153c3

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -33,6 +33,12 @@ urlbar:
     Exposure is sent once per browsing session after the first urlbar query is
     made.
   variables:
+    merinoClientVariants:
+      type: string
+      fallbackPref: browser.urlbar.merino.clientVariants
+      description: >-
+        Comma separated list of client variants to report to the Merino server.
+        May impact server behavior.
     merinoEnabled:
       type: boolean
       fallbackPref: browser.urlbar.merino.enabled
