Bug 1743711: Show allowed sponsored suggestions in second position. r=adw
Differential Revision: https://phabricator.services.mozilla.com/D132763

UltraBlame original commit: e44dce42aa0586aa96b0ee2f2cb9722c0955b4f2

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -72,6 +72,10 @@ urlbar:
         - history
         - offline
         - online
+    quickSuggestAllowPositionInSuggestions:
+      type: boolean
+      fallbackPref: browser.urlbar.quicksuggest.allowPositionInSuggestions
+      description: Whether quick suggest results can be shown in position specified in the suggestions.
     quickSuggestShouldShowOnboardingDialog:
       type: boolean
       fallbackPref: browser.urlbar.quicksuggest.shouldShowOnboardingDialog
