--- a/services/common/tests/unit/xpcshell.ini
+++ b/services/common/tests/unit/xpcshell.ini
@@ -33,8 +33,7 @@ tags = remote-settings blocklist
 [test_hawkclient.js]
 skip-if = os == "android"
 [test_hawkrequest.js]
-skip-if = os == "android" || socketprocess_networking
-# See bug 1743079 for socket process.
+skip-if = os == "android"
 
 [test_logmanager.js]
 [test_observers.js]
