Bug 1743782 [wpt PR 30970] - Update wpt metadata, a=testonly
wpt-pr: 30970
wpt-type: metadata

UltraBlame original commit: 1124b0e31e3ef9bdf7b68c9ff19bf59997417b33

--- a/testing/web-platform/meta/resource-timing/object-not-found-adds-entry.html.ini
+++ b/testing/web-platform/meta/resource-timing/object-not-found-adds-entry.html.ini
@@ -8,10 +8,9 @@
 
   [Verify that a 404 null-typed object emits an entry.]
     expected:
-      if (os == "linux") and not swgl and fission and debug: [PASS, FAIL]
-      if (os == "linux") and not swgl and fission and not debug: [PASS, FAIL]
-      if (os == "linux") and not swgl and not fission: [PASS, FAIL]
-      if (os == "linux") and swgl: [PASS, FAIL]
+      if (os == "linux") and swgl: [FAIL, PASS]
+      if (os == "linux") and not swgl and debug: [PASS, FAIL]
+      if (os == "linux") and not swgl and not debug: [PASS, FAIL]
 
   [Verify that a 404 img-typed object emits an entry.]
     expected:
