--- a/devtools/client/debugger/test/mochitest/browser.ini
+++ b/devtools/client/debugger/test/mochitest/browser.ini
@@ -64,6 +64,7 @@ skip-if = os == "win"
 [browser_dbg-scopes.js]
 [browser_dbg-chrome-create.js]
 skip-if = (verify && !debug && (os == 'linux'))
+[browser_dbg-chrome-debugging.js]
 [browser_dbg-command-click.js]
 [browser_dbg-console.js]
 [browser_dbg-console-async.js]
