--- a/testing/web-platform/meta/html/canvas/element/manual/imagebitmap/imageBitmapRendering-transferFromImageBitmap-webgl.html.ini
+++ b/testing/web-platform/meta/html/canvas/element/manual/imagebitmap/imageBitmapRendering-transferFromImageBitmap-webgl.html.ini
@@ -1,4 +1,2 @@
 [imageBitmapRendering-transferFromImageBitmap-webgl.html]
-  expected:
-    if (os == "linux") and not fission and not debug: [FAIL, ERROR]
-    FAIL
+  prefs: [gfx.offscreencanvas.enabled:true]
