Bug 1707075 - Enable dispatch_by_pointer_messages by default r=edgar
Differential Revision: https://phabricator.services.mozilla.com/D133352

UltraBlame original commit: d0f31bbfba3175e8eda210fe2fca13016ef1e63c

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3885,7 +3885,7 @@
   # mouse messages.
 -   name: dom.w3c_pointer_events.dispatch_by_pointer_messages
     type: bool
-    value: @IS_NIGHTLY_BUILD@
+    value: true
     mirror: always
 
 -   name: dom.w3c_pointer_events.scroll_by_pen.enabled
