--- a/testing/web-platform/meta/workers/WorkerGlobalScope_requestAnimationFrame.tentative.worker.js.ini
+++ b/testing/web-platform/meta/workers/WorkerGlobalScope_requestAnimationFrame.tentative.worker.js.ini
@@ -1,2 +1,4 @@
 [WorkerGlobalScope_requestAnimationFrame.tentative.worker.html]
-  prefs: [gfx.offscreencanvas.enabled:true]
+  [WorkerGlobalScope_requestAnimationFrame]
+    expected: FAIL
+
