--- a/testing/web-platform/meta/html/dom/idlharness.https.html.ini
+++ b/testing/web-platform/meta/html/dom/idlharness.https.html.ini
@@ -571,6 +571,9 @@ prefs: [dom.security.featurePolicy.experimental.enabled:true, dom.security.featu
   [OffscreenCanvasRenderingContext2D interface: operation setLineDash(sequence<unrestricted double>)]
     expected: FAIL
 
+  [OffscreenCanvas interface: operation convertToBlob(optional ImageEncodeOptions)]
+    expected: FAIL
+
   [OffscreenCanvasRenderingContext2D interface: operation arc(unrestricted double, unrestricted double, unrestricted double, unrestricted double, unrestricted double, optional boolean)]
     expected: FAIL
 
@@ -676,6 +679,12 @@ prefs: [dom.security.featurePolicy.experimental.enabled:true, dom.security.featu
     expected: FAIL
 
   [Path2D interface: operation roundRect(unrestricted double, unrestricted double, unrestricted double, unrestricted double, sequence<(unrestricted double or DOMPointInit)>)]
+    expected: FAIL
+
+  [OffscreenCanvas interface: attribute oncontextlost]
+    expected: FAIL
+
+  [OffscreenCanvas interface: attribute oncontextrestored]
     expected: FAIL
 
   [OffscreenCanvasRenderingContext2D interface: operation isContextLost()]
