--- a/testing/web-platform/meta/html/dom/idlharness.worker.js.ini
+++ b/testing/web-platform/meta/html/dom/idlharness.worker.js.ini
@@ -55,6 +55,9 @@
   [TextMetrics interface: attribute emHeightAscent]
     expected: FAIL
 
+  [DedicatedWorkerGlobalScope interface: calling requestAnimationFrame(FrameRequestCallback) on self with too few arguments must throw TypeError]
+    expected: FAIL
+
   [TextMetrics interface: attribute ideographicBaseline]
     expected: FAIL
 
@@ -104,6 +107,9 @@
     expected: FAIL
 
   [OffscreenCanvasRenderingContext2D interface: operation quadraticCurveTo(unrestricted double, unrestricted double, unrestricted double, unrestricted double)]
+    expected: FAIL
+
+  [DedicatedWorkerGlobalScope interface: self must inherit property "cancelAnimationFrame(unsigned long)" with the proper type]
     expected: FAIL
 
   [OffscreenCanvasRenderingContext2D interface: operation resetTransform()]
@@ -223,6 +229,9 @@
   [OffscreenCanvasRenderingContext2D interface: operation putImageData(ImageData, long, long, long, long, long, long)]
     expected: FAIL
 
+  [DedicatedWorkerGlobalScope interface: calling cancelAnimationFrame(unsigned long) on self with too few arguments must throw TypeError]
+    expected: FAIL
+
   [OffscreenCanvasRenderingContext2D interface: operation moveTo(unrestricted double, unrestricted double)]
     expected: FAIL
 
@@ -295,6 +304,9 @@
   [TextMetrics interface: existence and properties of interface prototype object's "constructor" property]
     expected: FAIL
 
+  [DedicatedWorkerGlobalScope interface: self must inherit property "requestAnimationFrame(FrameRequestCallback)" with the proper type]
+    expected: FAIL
+
   [Path2D interface: operation bezierCurveTo(unrestricted double, unrestricted double, unrestricted double, unrestricted double, unrestricted double, unrestricted double)]
     expected: FAIL
 
@@ -310,7 +322,13 @@
   [CanvasGradient interface: existence and properties of interface prototype object]
     expected: FAIL
 
+  [DedicatedWorkerGlobalScope interface: operation cancelAnimationFrame(unsigned long)]
+    expected: FAIL
+
   [OffscreenCanvasRenderingContext2D interface: operation save()]
+    expected: FAIL
+
+  [DedicatedWorkerGlobalScope interface: operation requestAnimationFrame(FrameRequestCallback)]
     expected: FAIL
 
   [CanvasPattern interface object length]
@@ -338,6 +356,9 @@
     expected: FAIL
 
   [OffscreenCanvasRenderingContext2D interface: operation fill(Path2D, optional CanvasFillRule)]
+    expected: FAIL
+
+  [OffscreenCanvas interface: operation convertToBlob(optional ImageEncodeOptions)]
     expected: FAIL
 
   [OffscreenCanvasRenderingContext2D interface: operation clip(Path2D, optional CanvasFillRule)]
@@ -407,6 +428,12 @@
     expected: FAIL
 
   [Path2D interface: operation roundRect(unrestricted double, unrestricted double, unrestricted double, unrestricted double, sequence<(unrestricted double or DOMPointInit)>)]
+    expected: FAIL
+
+  [OffscreenCanvas interface: attribute oncontextlost]
+    expected: FAIL
+
+  [OffscreenCanvas interface: attribute oncontextrestored]
     expected: FAIL
 
   [OffscreenCanvasRenderingContext2D interface: operation isContextLost()]
