Bug 1743667 - Hook up WebGPU device limits and features r=jgilbert,webidl,smaug
Differential Revision: https://phabricator.services.mozilla.com/D133280

UltraBlame original commit: 78f599401a07bbb8dd9e64e9b87460ed0c866033

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1366,9 +1366,6 @@ DOMInterfaces = {
 'GPUAdapter': {
     'nativeType': 'mozilla::webgpu::Adapter',
 },
-'GPUAdapterFeatures': {
-    'nativeType': 'mozilla::webgpu::AdapterFeatures',
-},
 'GPUBindGroup': {
     'nativeType': 'mozilla::webgpu::BindGroup',
 },
@@ -1435,6 +1432,9 @@ DOMInterfaces = {
 },
 'GPUShaderModule': {
     'nativeType': 'mozilla::webgpu::ShaderModule',
+},
+'GPUSupportedFeatures': {
+    'nativeType': 'mozilla::webgpu::SupportedFeatures',
 },
 'GPUSupportedLimits': {
     'nativeType': 'mozilla::webgpu::SupportedLimits',
