Bug 1745428 - Make dom.maxHardwareConcurrency not require a restart. r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D133484

UltraBlame original commit: 7057e1075e2d702c84b14c748acab2ca21ab256b

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3906,6 +3906,12 @@
   value: -1
   mirror: always
 
+# Maximum value of navigator.hardwareConcurrency.
+- name: dom.maxHardwareConcurrency
+  type: RelaxedAtomicUint32
+  value: 128
+  mirror: always
+
 # W3C pointer events draft.
 - name: dom.w3c_pointer_events.implicit_capture
   type: bool
