--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -1871,7 +1871,7 @@ os.environment:
     bug_numbers:
       - 1715348
     description: Whether this app was kept in macOS Dock on startup
-    expires: "97"
+    expires: never
     kind: boolean
     notification_emails:
       - elee@mozilla.com
@@ -1889,7 +1889,7 @@ os.environment:
       - 1685213
       - 1725298
     description: Whether this app was pinned to taskbar on startup
-    expires: "100"
+    expires: never
     kind: boolean
     notification_emails:
       - application-update-telemetry-alerts@mozilla.com
