Bug 1243603 - Telemetry for when Windows invokes Firefox to handle a registered file type or protocol. r=Gijs
The `-osint` flag is used as the signal that Windows is invoking
Firefox to handle a file type or protocol.  The `-osint` flag was
introduced in order to mitigate security breaches due to poor argument
quoting (by consumers invoking Firefox); to use it for this new
purpose, it must be preserved for downstream consumers to react to.
Alternately, some marker of the flag could be maintained.  Since the
flag needs to transit through the launcher process, I've elected to
simply not strip it as we validate command lines, and to accommodate
it further downstream.  (It looks like Thunderbird already
accommodates `-osint`: see
https://searchfox.org/comm-central/rev/3e8f926de9ea09945b237177eb6d489c70318f0e/mail/components/MessengerContentHandler.jsm#568.)

The telemetry in this patch achieves two purposes.  The first is to
count the number of times Firefox is invoked to handle a registered
file type or protocol: for this, a new keyed uint scalar was added.
File types start with a ".", just like on Windows; protocols
(equivalently, the schemes used to identify them) do not start with a
".".

The second is to identify times when Firefox is launched (i.e., it was
not already running) to handle a registered file type or protocol.

This generalizes the existing `os.environment.launch_method`,
introducing `os.environment.launched_to_handle` and
`os.environment.invoked_to_handle` string scalars, which record the
file type or protocol.

The command line state `STATE_INITIAL_LAUNCH` is used to discriminate
launching from invoking.

Differential Revision: https://phabricator.services.mozilla.com/D132288

UltraBlame original commit: 3526fd3304fd8889cecdfe05fa549d55ac73f304

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -1867,6 +1867,61 @@ os.environment:
     operating_systems:
       - windows
 
+  launched_to_handle:
+    bug_numbers:
+      - 1243603
+    description: >
+      Records counts for when Firefox was launched afresh (i.e., was not already
+      running) to handle a file type or protocol with `-osint -url ...`.  The
+      result is split into keys which represent the file extension: currently,
+      the set of file types Firefox registers to handle, namely ".avif", ".htm",
+      ".html", ".pdf", ".shtml", ".xht", ".xhtml", ".svg", ".webp", and the set
+      of protocol schemes that Firefox registers to handle, namely "about",
+      "http", "https", "mailto".  If Firefox was launched to handle a file type
+      or protocol it does not register to handle by default, the count is
+      recorded as ".<other extension>" or "<other protocol>", respectively
+      (neither of which are valid extension or protocol identifiers).
+    keyed: true
+    expires: "106"
+    kind: uint
+    notification_emails:
+      - application-update-telemetry-alerts@mozilla.com
+    release_channel_collection: opt-out
+    products:
+      - firefox
+    record_in_processes:
+      - main
+    operating_systems:
+      - windows
+
+  invoked_to_handle:
+    bug_numbers:
+      - 1243603
+    description: >
+      Records counts for when Firefox was invoked (i.e., was already running and
+      was not launched) to handle a file type or protocol with `-osint -url
+      ...`.  The result is split into keys which represent the file extension:
+      currently, the set of file types Firefox registers to handle, namely
+      ".avif", ".htm", ".html", ".pdf", ".shtml", ".xht", ".xhtml", ".svg",
+      ".webp", and the set of protocol schemes that Firefox registers to handle,
+      namely "about", "http", "https", "mailto".  If Firefox was invoked to
+      handle a file type or protocol it does not register to handle by default,
+      the count is recorded as ".<other extension>" or "<other protocol>",
+      respectively (neither of which are valid extension or protocol
+      identifiers).
+    keyed: true
+    expires: "106"
+    kind: uint
+    notification_emails:
+      - application-update-telemetry-alerts@mozilla.com
+    release_channel_collection: opt-out
+    products:
+      - firefox
+    record_in_processes:
+      - main
+    operating_systems:
+      - windows
+
   is_kept_in_dock:
     bug_numbers:
       - 1715348
