--- a/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.ini
+++ b/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.ini
@@ -183,8 +183,7 @@ playback_version = 5.1.1
 test_url = https://twitter.com/BarackObama
 
 [wikia]
-playback_pageset_manifest = mitm5-linux-firefox-wikia.manifest
-playback_version = 5.1.1
+secondary_url = https://marvel.fandom.com/wiki/Celestials
 test_url = https://marvel.fandom.com/wiki/Black_Panther
 
 [wikipedia]
