--- a/browser/components/screenshots/tests/browser/browser.ini
+++ b/browser/components/screenshots/tests/browser/browser.ini
@@ -7,9 +7,11 @@ prefs =
   extensions.screenshots.disabled=false
   screenshots.browser.component.enabled=true
 
+[browser_screenshots_page_unload.js]
 [browser_screenshots_test_escape.js]
 [browser_screenshots_test_full_page.js]
 skip-if = (!debug && os == 'win' && os_version == '6.1') # Bug 1746281
+[browser_screenshots_test_page_crash.js]
 [browser_screenshots_test_toggle_pref.js]
 [browser_screenshots_test_toolbar_button.js]
 [browser_screenshots_test_visible.js]
