Bug 1724690 - Check for invalid combination of capability and type. r=pbz,preferences-reviewers,Gijs
Differential Revision: https://phabricator.services.mozilla.com/D137733

UltraBlame original commit: 337045fad6f2695b8338155be60d35acead0c7ae

--- a/browser/components/preferences/tests/browser.ini
+++ b/browser/components/preferences/tests/browser.ini
@@ -25,6 +25,7 @@ skip-if =
   os == "linux" && os_version == "18.04" && debug # Bug 1723854
 [browser_experimental_features_resetall.js]
 [browser_filetype_dialog.js]
+[browser_ignore_invalid_capability.js]
 [browser_moreFromMozilla.js]
 [browser_moreFromMozilla_locales.js]
 [browser_search_no_results_change_category.js]
